--- a/app/src/main/res/layout/activity_cpu.xml
+++ b/app/src/main/res/layout/activity_cpu.xml
@@ -102,308 +102,26 @@
                 android:orientation="vertical"
                 android:padding="5sp">
 
-                <GridLayout
+                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:columnCount="3">
+                    android:gravity="start"
+                    android:text="Processor Information:"
+                    android:textSize="20sp"
+                    android:textColor="@color/colorWhiteShade"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:padding="3sp"/>
 
-                    <TextView
-                        android:text="Processor Info:"
-                        android:gravity="center"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:layout_column="0"
-                        android:layout_row="0"
-                        android:layout_gravity="center"
-                        android:padding="3sp"
-                        android:textColor="@color/colorWhiteShade"
-                        android:textSize="18sp"/>
-
-                    <TextView
-                        android:text="Processor:"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:layout_column="0"
-                        android:layout_row="1"
-                        android:padding="3sp"
-                        android:layout_columnWeight="1"/>
-
-                    <TextView
-                        android:id="@+id/processor"
-                        android:textColor="@color/colorWhiteShade"
-                        android:text="___"
-                        android:padding="3sp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:layout_columnWeight="1"
-                        android:layout_column="1"
-                        android:layout_row="1"/>
-
-                    <TextView
-                        android:text="Number of Cores:"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:layout_column="0"
-                        android:layout_row="2"
-                        android:padding="3sp"
-                        android:layout_columnWeight="1"/>
-
-                    <TextView
-                        android:id="@+id/cores"
-                        android:textColor="@color/colorWhiteShade"
-                        android:text="___"
-                        android:padding="3sp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:layout_columnWeight="1"
-                        android:layout_column="1"
-                        android:layout_row="2"/>
-
-                    <TextView
-                        android:text="Maximum Frequency:"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:layout_column="0"
-                        android:layout_row="3"
-                        android:padding="3sp"
-                        android:layout_columnWeight="1"/>
-
-                    <TextView
-                        android:id="@+id/max_frequency"
-                        android:textColor="@color/colorWhiteShade"
-                        android:text="___"
-                        android:padding="3sp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:layout_columnWeight="1"
-                        android:layout_column="1"
-                        android:layout_row="3"/>
-
-                    <TextView
-                        android:text="Minimum Frequency:"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:layout_column="0"
-                        android:layout_row="4"
-                        android:padding="3sp"
-                        android:layout_columnWeight="1"/>
-
-                    <TextView
-                        android:id="@+id/min_frequency"
-                        android:textColor="@color/colorWhiteShade"
-                        android:text="___"
-                        android:padding="3sp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:layout_columnWeight="1"
-                        android:layout_column="1"
-                        android:layout_row="4"/>
-
-                    <TextView
-                        android:text="Current Frequency:"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:layout_column="0"
-                        android:layout_row="5"
-                        android:padding="3sp"
-                        android:layout_columnWeight="1"/>
-
-                    <TextView
-                        android:id="@+id/current_frequency"
-                        android:textColor="@color/colorWhiteShade"
-                        android:text="___"
-                        android:padding="3sp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:layout_columnWeight="1"
-                        android:layout_column="1"
-                        android:layout_row="5"/>
-
-                    <TextView
-                        android:text="CPU Architecture:"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:layout_column="0"
-                        android:layout_row="6"
-                        android:padding="3sp"
-                        android:layout_columnWeight="1"/>
-
-                    <TextView
-                        android:id="@+id/cpu_architecture"
-                        android:textColor="@color/colorWhiteShade"
-                        android:text="___"
-                        android:padding="3sp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:layout_columnWeight="1"
-                        android:layout_column="1"
-                        android:layout_row="6"/>
-
-                    <TextView
-                        android:text="BogoMIPS:"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:layout_column="0"
-                        android:layout_row="7"
-                        android:padding="3sp"
-                        android:layout_columnWeight="1"/>
-
-                    <TextView
-                        android:id="@+id/bogomips"
-                        android:textColor="@color/colorWhiteShade"
-                        android:text="___"
-                        android:padding="3sp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:layout_columnWeight="1"
-                        android:layout_column="1"
-                        android:layout_row="7"/>
-
-                    <TextView
-                        android:text="Features:"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:layout_column="0"
-                        android:layout_row="8"
-                        android:padding="3sp"
-                        android:layout_columnWeight="1"/>
-
-                    <TextView
-                        android:id="@+id/features"
-                        android:textColor="@color/colorWhiteShade"
-                        android:text="___"
-                        android:padding="3sp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:layout_columnWeight="1"
-                        android:layout_column="1"
-                        android:layout_row="8"/>
-
-                    <TextView
-                        android:text="CPU Implementer:"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:layout_column="0"
-                        android:layout_row="9"
-                        android:padding="3sp"
-                        android:layout_columnWeight="1"/>
-
-                    <TextView
-                        android:id="@+id/cpu_implementer"
-                        android:textColor="@color/colorWhiteShade"
-                        android:text="___"
-                        android:padding="3sp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:layout_columnWeight="1"
-                        android:layout_column="1"
-                        android:layout_row="9"/>
-
-                    <TextView
-                        android:text="CPU Variant:"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:layout_column="0"
-                        android:layout_row="10"
-                        android:padding="3sp"
-                        android:layout_columnWeight="1"/>
-
-                    <TextView
-                        android:id="@+id/cpu_variant"
-                        android:textColor="@color/colorWhiteShade"
-                        android:text="___"
-                        android:padding="3sp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:layout_columnWeight="1"
-                        android:layout_column="1"
-                        android:layout_row="10"/>
-
-                    <TextView
-                        android:text="CPU Part:"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:layout_column="0"
-                        android:layout_row="11"
-                        android:padding="3sp"
-                        android:layout_columnWeight="1"/>
-
-                    <TextView
-                        android:id="@+id/cpu_part"
-                        android:textColor="@color/colorWhiteShade"
-                        android:text="___"
-                        android:padding="3sp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:layout_columnWeight="1"
-                        android:layout_column="1"
-                        android:layout_row="11"/>
-
-                    <TextView
-                        android:text="CPU Revision:"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:layout_column="0"
-                        android:layout_row="12"
-                        android:padding="3sp"
-                        android:layout_columnWeight="1"/>
-
-                    <TextView
-                        android:id="@+id/cpu_revision"
-                        android:textColor="@color/colorWhiteShade"
-                        android:text="___"
-                        android:padding="3sp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:layout_columnWeight="1"
-                        android:layout_column="1"
-                        android:layout_row="12"/>
-
-                    <TextView
-                        android:text="Hardware:"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:layout_column="0"
-                        android:layout_row="13"
-                        android:padding="3sp"
-                        android:layout_columnWeight="1"/>
-
-                    <TextView
-                        android:id="@+id/hardware"
-                        android:textColor="@color/colorWhiteShade"
-                        android:text="___"
-                        android:padding="3sp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:layout_columnWeight="1"
-                        android:layout_column="1"
-                        android:layout_row="13"/>
-
-                    <TextView
-                        android:text="Revision:"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:layout_column="0"
-                        android:layout_row="14"
-                        android:padding="3sp"
-                        android:layout_columnWeight="1"/>
-
-                    <TextView
-                        android:id="@+id/revision"
-                        android:textColor="@color/colorWhiteShade"
-                        android:text="___"
-                        android:padding="3sp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:layout_columnWeight="1"
-                        android:layout_column="1"
-                        android:layout_row="14"/>
-
-                    <TextView
-                        android:text="Serial:"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:layout_column="0"
-                        android:layout_row="15"
-                        android:padding="3sp"
-                        android:layout_columnWeight="1"/>
-
-                    <TextView
-                        android:id="@+id/serial"
-                        android:textColor="@color/colorWhiteShade"
-                        android:text="___"
-                        android:padding="3sp"
-                        android:fontFamily="sans-serif-smallcaps"
-                        android:gravity="center"
-                        android:layout_columnWeight="1"
-                        android:layout_column="1"
-                        android:layout_row="15"/>
-
-                </GridLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:text="CPU Info Goes Here"
+                    android:textSize="15sp"
+                    android:textColor="@color/colorWhiteShade"
+                    android:id="@+id/cpu_all"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:padding="3sp"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -597,15 +315,6 @@
                     android:gravity="center"
                     android:text="Partition Size 5:"
                     android:id="@+id/partition_size5"
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:padding="3sp"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:text="CPU Information:"
-                    android:id="@+id/cpu_all"
                     android:fontFamily="sans-serif-smallcaps"
                     android:padding="3sp"/>
 
