--- a/app/src/main/res/layout/activity_step_detector.xml
+++ b/app/src/main/res/layout/activity_step_detector.xml
@@ -70,12 +70,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:elevation="@dimen/app_bar_elevation"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:fontFamily="sans-serif-smallcaps"
                 android:textStyle="bold"
                 android:padding="6sp"
                 android:gravity="center"
-                android:textColor="@color/colorBlackShade"
+                android:textColor="@color/colorWhiteShade"
                 android:text="SAMPLE DATA"/>
 
         </android.support.v7.widget.CardView>
@@ -84,7 +84,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:cardElevation="@dimen/app_bar_elevation"
         app:cardCornerRadius="5sp"
         android:layout_margin="10sp"
@@ -120,58 +120,58 @@
                     android:layout_toRightOf="@+id/one"/>
 
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Accuracy:"
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:layout_below="@+id/one"
-                    android:textSize="20sp"
-                    android:textColor="@color/colorBlackShade"
-                    android:padding="5sp"
-                    android:id="@+id/two"/>
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Accuracy:"-->
+                    <!--android:fontFamily="sans-serif-smallcaps"-->
+                    <!--android:layout_below="@+id/one"-->
+                    <!--android:textSize="20sp"-->
+                    <!--android:textColor="@color/colorBlackShade"-->
+                    <!--android:padding="5sp"-->
+                    <!--android:id="@+id/two"/>-->
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Accuracy"
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:textSize="20sp"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:padding="5sp"
-                    android:id="@+id/accuracy"
-                    android:layout_toRightOf="@+id/two"
-                    android:layout_below="@+id/one"/>
+                <!--<TextView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Accuracy"-->
+                    <!--android:fontFamily="sans-serif-smallcaps"-->
+                    <!--android:textSize="20sp"-->
+                    <!--android:textColor="@color/colorPrimaryDark"-->
+                    <!--android:padding="5sp"-->
+                    <!--android:id="@+id/accuracy"-->
+                    <!--android:layout_toRightOf="@+id/two"-->
+                    <!--android:layout_below="@+id/one"/>-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Sampling Rate:"
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:layout_below="@+id/two"
-                    android:textSize="20sp"
-                    android:textColor="@color/colorBlackShade"
-                    android:padding="5sp"
-                    android:id="@+id/three"/>
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Sampling Rate:"-->
+                    <!--android:fontFamily="sans-serif-smallcaps"-->
+                    <!--android:layout_below="@+id/two"-->
+                    <!--android:textSize="20sp"-->
+                    <!--android:textColor="@color/colorBlackShade"-->
+                    <!--android:padding="5sp"-->
+                    <!--android:id="@+id/three"/>-->
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Sampling Rate"
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:textSize="20sp"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:padding="5sp"
-                    android:id="@+id/sampling_rate"
-                    android:layout_toRightOf="@+id/three"
-                    android:layout_below="@+id/two"/>
+                <!--<TextView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Sampling Rate"-->
+                    <!--android:fontFamily="sans-serif-smallcaps"-->
+                    <!--android:textSize="20sp"-->
+                    <!--android:textColor="@color/colorPrimaryDark"-->
+                    <!--android:padding="5sp"-->
+                    <!--android:id="@+id/sampling_rate"-->
+                    <!--android:layout_toRightOf="@+id/three"-->
+                    <!--android:layout_below="@+id/two"/>-->
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Minimum Delay:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_below="@+id/three"
+                    android:layout_below="@+id/one"
                     android:textSize="20sp"
                     android:textColor="@color/colorBlackShade"
                     android:padding="5sp"
@@ -187,7 +187,7 @@
                     android:padding="5sp"
                     android:id="@+id/minimum_delay"
                     android:layout_toRightOf="@+id/four"
-                    android:layout_below="@+id/three"/>
+                    android:layout_below="@+id/one"/>
 
 
                 <TextView
