--- a/app/src/main/res/layout/activity_wi_fi.xml
+++ b/app/src/main/res/layout/activity_wi_fi.xml
@@ -222,8 +222,11 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
                 android:text="Configured Networks"
                 android:textAlignment="center"
+                android:textAllCaps="true"
+                android:textSize="18sp"
                 android:textStyle="bold" />
         <ScrollView
 
