--- a/app/src/main/res/layout/layout_view_wifi.xml
+++ b/app/src/main/res/layout/layout_view_wifi.xml
@@ -27,6 +27,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/width"/>
+        android:id="@+id/timestamp"/>
 
 </LinearLayout>
