--- a/app/src/main/res/layout/activity_screen.xml
+++ b/app/src/main/res/layout/activity_screen.xml
@@ -49,6 +49,7 @@
             <ImageView
                 android:id="@+id/imageView"
                 android:padding="10sp"
+                android:src="@drawable/screen"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
