--- a/app/src/main/res/layout-land/activity_screen.xml
+++ b/app/src/main/res/layout-land/activity_screen.xml
@@ -54,7 +54,7 @@
 
                 <ImageView
                     android:id="@+id/imageView"
-                    android:src="@drawable/flash"
+                    android:src="@drawable/screen"
                     android:padding="10sp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
