--- a/app/src/main/res/layout/activity_gyroscope.xml
+++ b/app/src/main/res/layout/activity_gyroscope.xml
@@ -49,7 +49,7 @@
             <ImageView
                 android:id="@+id/imageView"
                 android:padding="10sp"
-                android:src="@drawable/rotation"
+                android:src="@drawable/gyroscope"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
