--- a/app/src/main/res/drawable/disabled_background.xml
+++ b/app/src/main/res/drawable/disabled_background.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke android:color="@color/colorAccentDark" android:width="3sp" android:dashGap="5sp" android:dashWidth="20sp"/>
-    <solid android:color="@color/colorAccent"/>
+    <solid android:color="@color/colorPrimaryLight"/>
 </shape>
