--- a/app/src/main/res/layout/activity_accelerometer.xml
+++ b/app/src/main/res/layout/activity_accelerometer.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_camera"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -90,7 +91,14 @@
         android:layout_margin="10sp"
         android:layout_below="@+id/ll">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:weightSum="5">
+
         <ScrollView
+            android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -219,9 +227,23 @@
                     android:gravity="start"
                     android:id="@+id/resolution"/>
 
+
+
             </LinearLayout>
 
         </ScrollView>
+
+
+            <Button
+                android:layout_weight="4"
+                android:id="@+id/btnTest"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="20dip"
+                android:background="#ea4c88"
+                android:text="TEST THE SENSOR"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
