--- a/app/src/main/res/layout/activity_accelerometer.xml
+++ b/app/src/main/res/layout/activity_accelerometer.xml
@@ -50,7 +50,7 @@
             <ImageView
                 android:id="@+id/imageView"
                 android:padding="10sp"
-                android:src="@drawable/gyroscope"
+                android:src="@drawable/accelerometer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
