--- a/app/src/main/res/layout/activity_humidity.xml
+++ b/app/src/main/res/layout/activity_humidity.xml
@@ -48,7 +48,7 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:src="@drawable/light"
+                android:src="@drawable/humidity"
                 android:padding="10sp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
