--- a/app/src/main/res/layout-land/activity_vibrator.xml
+++ b/app/src/main/res/layout-land/activity_vibrator.xml
@@ -119,83 +119,83 @@
 
             </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.CardView
-                android:layout_column="2"
-                android:layout_row="1"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                app:cardElevation="@dimen/app_bar_elevation"
-                app:cardCornerRadius="5sp"
-                android:layout_margin="5sp"
-                android:clickable="true"
-                android:onClick="onClick"
-                android:id="@+id/card2">
+            <!--<android.support.v7.widget.CardView-->
+                <!--android:layout_column="2"-->
+                <!--android:layout_row="1"-->
+                <!--android:layout_rowWeight="1"-->
+                <!--android:layout_columnWeight="1"-->
+                <!--app:cardElevation="@dimen/app_bar_elevation"-->
+                <!--app:cardCornerRadius="5sp"-->
+                <!--android:layout_margin="5sp"-->
+                <!--android:clickable="true"-->
+                <!--android:onClick="onClick"-->
+                <!--android:id="@+id/card2">-->
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="8sp"
-                    android:text="Vibrate Loop 1"
-                    android:textStyle="bold"
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:textSize="18sp"
-                    android:gravity="center"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:layout_gravity="center"/>
+                <!--<TextView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:padding="8sp"-->
+                    <!--android:text="Vibrate Loop 1"-->
+                    <!--android:textStyle="bold"-->
+                    <!--android:fontFamily="sans-serif-smallcaps"-->
+                    <!--android:textSize="18sp"-->
+                    <!--android:gravity="center"-->
+                    <!--android:textColor="@color/colorPrimaryDark"-->
+                    <!--android:layout_gravity="center"/>-->
 
-            </android.support.v7.widget.CardView>
+            <!--</android.support.v7.widget.CardView>-->
 
-            <android.support.v7.widget.CardView
-                android:layout_column="1"
-                android:layout_row="2"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                app:cardElevation="@dimen/app_bar_elevation"
-                app:cardCornerRadius="5sp"
-                android:layout_margin="5sp"
-                android:clickable="true"
-                android:onClick="onClick"
-                android:id="@+id/card3">
+            <!--<android.support.v7.widget.CardView-->
+                <!--android:layout_column="1"-->
+                <!--android:layout_row="2"-->
+                <!--android:layout_rowWeight="1"-->
+                <!--android:layout_columnWeight="1"-->
+                <!--app:cardElevation="@dimen/app_bar_elevation"-->
+                <!--app:cardCornerRadius="5sp"-->
+                <!--android:layout_margin="5sp"-->
+                <!--android:clickable="true"-->
+                <!--android:onClick="onClick"-->
+                <!--android:id="@+id/card3">-->
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="8sp"
-                    android:text="Vibrate Loop 2"
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:textStyle="bold"
-                    android:textSize="18sp"
-                    android:gravity="center"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:layout_gravity="center"/>
+                <!--<TextView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:padding="8sp"-->
+                    <!--android:text="Vibrate Loop 2"-->
+                    <!--android:fontFamily="sans-serif-smallcaps"-->
+                    <!--android:textStyle="bold"-->
+                    <!--android:textSize="18sp"-->
+                    <!--android:gravity="center"-->
+                    <!--android:textColor="@color/colorPrimaryDark"-->
+                    <!--android:layout_gravity="center"/>-->
 
-            </android.support.v7.widget.CardView>
+            <!--</android.support.v7.widget.CardView>-->
 
-            <android.support.v7.widget.CardView
-                android:layout_column="2"
-                android:layout_row="2"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                app:cardElevation="@dimen/app_bar_elevation"
-                app:cardCornerRadius="5sp"
-                android:layout_margin="5sp"
-                android:clickable="true"
-                android:onClick="onClick"
-                android:id="@+id/card4">
+            <!--<android.support.v7.widget.CardView-->
+                <!--android:layout_column="2"-->
+                <!--android:layout_row="2"-->
+                <!--android:layout_rowWeight="1"-->
+                <!--android:layout_columnWeight="1"-->
+                <!--app:cardElevation="@dimen/app_bar_elevation"-->
+                <!--app:cardCornerRadius="5sp"-->
+                <!--android:layout_margin="5sp"-->
+                <!--android:clickable="true"-->
+                <!--android:onClick="onClick"-->
+                <!--android:id="@+id/card4">-->
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="8sp"
-                    android:text="Vibrate Loop 3"
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:textStyle="bold"
-                    android:textSize="18sp"
-                    android:gravity="center"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:layout_gravity="center"/>
+                <!--<TextView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:padding="8sp"-->
+                    <!--android:text="Vibrate Loop 3"-->
+                    <!--android:fontFamily="sans-serif-smallcaps"-->
+                    <!--android:textStyle="bold"-->
+                    <!--android:textSize="18sp"-->
+                    <!--android:gravity="center"-->
+                    <!--android:textColor="@color/colorPrimaryDark"-->
+                    <!--android:layout_gravity="center"/>-->
 
-            </android.support.v7.widget.CardView>
+            <!--</android.support.v7.widget.CardView>-->
 
         </GridLayout>
 
