--- a/app/src/main/res/layout/activity_accelerometer_test.xml
+++ b/app/src/main/res/layout/activity_accelerometer_test.xml
@@ -2,21 +2,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:id="@+id/view">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:fontFamily="casual"
-        android:foregroundGravity="center"
-        android:gravity="center"
+        android:fontFamily="sans-serif-smallcaps"
+        android:gravity="center_horizontal"
+        android:layout_centerInParent="true"
         android:padding="3sp"
         android:text="Shake to Switch Color"
-        android:textColor="@android:color/black"
+        android:textColor="@color/colorWhiteShade"
+        android:background="@color/colorBlackShade"
         android:textSize="40sp"
         android:textStyle="bold" />
 
